--- a/src/Component/UI/Modal.module.css
+++ b/src/Component/UI/Modal.module.css
@@ -14,6 +14,8 @@
 	top: 20vh;
 	left: 5%;
 	width: 90%;
+	max-height: 70vh;
+	overflow-y: scroll;
 	background-color: white;
 	padding: 1rem;
 	border-radius: 14px;
