--- a/src/index.css
+++ b/src/index.css
@@ -13,19 +13,6 @@ body {
 	margin: 0;
 	background-color: #3f3f3f;
 }
-::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	border-radius: 10px;
-	background-color: #ffffff;
-}
-
 ::-webkit-scrollbar {
-	width: 15px;
-	background-color: #ffffff;
-}
-
-::-webkit-scrollbar-thumb {
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	background-color: rgba(255, 110, 53, 0.725);
+	display: none;
 }
